--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -13,18 +13,19 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-      
+
     - name: PHP Security Checker
       uses: StephaneBour/actions-php-security-checker@1.0
 
-    #- name: Setup project
-    #  run: make setup
+    - name: Setup project
+      run: make setup
+
 
     - name: Check lint
       run: make lint
 
-    - name: Execute tests (Unit and Feature tests) via PHPUnit
-      run: make test
+    #- name: Execute tests (Unit and Feature tests) via PHPUnit
+    #  run: make test
 
     #- name: Validate composer.json and composer.lock
     #  run: composer validate
