--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -55,29 +55,12 @@ jobs:
           DB_DATABASE: dblvl3
           DB_USERNAME: postgres
           DB_PASSWORD: postgres
+        run:
+          cp .env.example .env
+          php artisan key:generate
+          php artisan migrate --force
 
       - name: Execute tests (Unit and Feature tests) via PHPUnit
-        run: make test
-
-
-
-    #- name: Cache Composer packages
-    #  id: composer-cache
-    #  uses: actions/cache@v2
-    #  with:
-    #    path: vendor
-    #    key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
-    #    restore-keys: |
-    #      ${{ runner.os }}-php-
-
-    #- name: Install dependencies
-    #  if: steps.composer-cache.outputs.cache-hit != 'true'
-    #  run: composer install --prefer-dist --no-progress --no-suggest
-
-    # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
-    # Docs: https://getcomposer.org/doc/articles/scripts.md
-
-      - name: Run test suite
         run: make test
 
       - name: Test & publish code coverage
