--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -53,7 +53,7 @@ jobs:
         env:
           DB_CONNECTION: pgsql
           DB_PORT: 5432
-          DB_DATABASE: dblvl3
+          DB_DATABASE: postgres
           DB_USERNAME: postgres
           DB_PASSWORD: postgres
         run: |
