--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -37,6 +37,14 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v2
 
+      - name: Setup PHP
+        # Action gives to setup the PHP environment to test application
+        # https://github.com/shivammathur/setup-php
+        uses: shivammathur/setup-php@v2
+        with:
+          # Specify the PHP version
+          php-version: '7.4'
+
       - name: PHP Security Checker
         uses: StephaneBour/actions-php-security-checker@1.0
 
